# lcb-fertilizers

./: .env  IMPLEMENTATION_SUMMARY.md  QR_CODE_FEATURE_GUIDE.md  QR_CODE_INTEGRATION_GUIDE.md  QR_CODE_QUICK_START.md  README.md  index.html  package-lock.json  package.json  vite.config.js
backend_fastapi/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db
backend_fastapi/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py  utils.py
backend_fastapi/app/routers/: __init__.py  auth.py  customers.py  dashboard.py  inventory.py  notifications.py  orders.py  products.py  qr_code.py  transfers.py  users.py
src/: App.jsx  index.css
src/components/: QRCodeGenerator.css  QRCodeGenerator.jsx  QRCodeHistory.css  QRCodeHistory.jsx  QRCodeViewPage.jsx  QRScanner.css  QRScanner.jsx
